# geo-2024-notebooks

./: README.md  pyproject.toml
data/: places.csv
